Update to install newer version of docker. Changed to completely delete /var/lib/docker instead of just cleaning out a few subfolders, because the contents changed in the new release and cannot be relied on. A few more tweaks here and there to remove warnings.

--- a/playbook/roles/config/tasks/main.yml
+++ b/playbook/roles/config/tasks/main.yml
@@ -17,15 +17,9 @@
     - "[Service]"
     - "ExecStart="
     - "ExecStart=/usr/bin/dockerd --debug --storage-driver=devicemapper --storage-opt dm.thinpooldev=/dev/mapper/docker-thinpool --storage-opt dm.use_deferred_removal=true"
-- name: Clean up /var/lib/docker
+- name: remove /var/lib/docker
   become: yes
-  shell: rm -r /var/lib/docker/image /var/lib/docker/containers /var/lib/docker/network /var/lib/docker/tmp /var/lib/docker/trust /var/lib/docker/volumes /var/lib/docker/devicemapper
-- name: Reload daemon
-  become: yes
-  command: systemctl daemon-reload
-- name: Start docker
-  become: yes
-  command: systemctl start docker
+  file: path=/var/lib/docker state=absent
 - name: Mount docker-data disk to /var/lib/docker
   become: yes
   mount: 
@@ -40,3 +34,9 @@
     src: /dev/docker/jenkins-home
     state: mounted
     fstype: ext4
+- name: Reload daemon
+  become: yes
+  command: systemctl daemon-reload
+- name: Start docker
+  become: yes
+  command: systemctl start docker
