--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-hostfile = inventory/ec2.py
-remote_user = ec2-user
+hostfile = inventory/hosts.ini
+#remote_user = ec2-user
 [ssh_connection]
 pipelining = True
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o StrictHostKeyChecking=no
