--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,5 +1,6 @@
 - hosts: ansible_test
-  user: ec2-user
+  user: a259888
+  connection: ssh
   sudo: true
   roles: 
     - tools
@@ -9,7 +10,7 @@
 - name: a play that runs entirely on the host
   hosts: 127.0.0.1
   connection: local
-  user: a259888
+  user: yourusername
   sudo: true
   roles:
     - tools
