added hosts groups and vars in hosts.ini

--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,6 +1,19 @@
-[all:vars]
+[jenkins_slaves]
+#servers to manage over ssh
+[jenkins_slaves:vars]
+# information and credentials needed for access and permissions on remote servers
 ansible_connection=ssh
 ansible_user=yourusername
 ansible_ssh_pass=yourpassword
+ansible_become_pass=yourpassword
+ansible_ssh_private_key_file=/path/.to/private_key
+[local]
+localhost
+# check that localhost is mapped to 127.0.0.1 in /etc/hosts on local machine
+
+[local:vars]
+# user must be a member of sudoers group
+ansible_connection=local
+ansible_user=yourusername
 ansible_become_pass=yourpassword
 
