--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,13 +1,12 @@
-- hosts: ansible_test
+- hosts: jenkins_slaves
   sudo: true
   roles: 
     - tools
     - lv
     - config
     - user
-- name: a play that runs entirely on the host
-  hosts: 127.0.0.1
-  connection: local
+# this play runs entirely on the host
+- hosts: local
   user: yourusername
   sudo: true
   roles:
